# rust-harp

./: .gitignore  Cargo.toml  README.md  TODO.md  calibrate_x_positions.py  fetch_actions_logs.ps1
.github/workflows/: android.yml
3d-models/: wacom.stl  wacom_harp.2.stl  wacom_harp.3.stl  wacom_harp.stl  wacom_harp_plate.1.stl  wacom_harp_plate.2.stl
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rustharp/app/: MainActivity.java  RustAudio.java  TonePlayer.java
android/app/src/main/res/values/: strings.xml
src/: adapter.rs  android_aaudio.rs  android_audio.rs  android_frontend.rs  android_jni.rs  app_state.rs  chord.rs  chord_wheel.rs  desktop_frontend.rs  engine.rs  input_map.rs  layout.rs  lib.rs  main.rs  notes.rs  output_midi.rs  output_midir.rs  output_synth.rs  pixel_font.rs  rows.rs  strum.rs  synth.rs  touch.rs  ui_adapter.rs  ui_events.rs  ui_settings.rs
