[package]
name = "rust-harp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Platform/UI deps (optional so `--no-default-features` can build core-only)
winit = { version = "0.29", optional = true }
softbuffer = { version = "0.4", optional = true }
# Output backend deps
midir = { version = "0.9", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }

bitflags = "2.10.0"

[features]
default = ["desktop", "midi"]
# Desktop UI (winit + softbuffer) and logging
desktop = ["dep:winit", "dep:softbuffer", "dep:log", "dep:env_logger"]
# MIDI runtime support
midi = ["dep:midir"]

[[bin]]
name = "rust-harp"
path = "src\\main.rs"
required-features = ["desktop", "midi"]
