[package]
name = "rust-harp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Platform/UI deps (optional so `--no-default-features` can build core-only)
winit = { version = "0.29", optional = true }
softbuffer = { version = "0.4", optional = true }
# Output backend deps
midir = { version = "0.9", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.11", optional = true }
cpal = { version = "0.15", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
# Android JNI surface
jni = { version = "0.21", default-features = false, optional = true }

bitflags = "2.10.0"

[features]
default = ["desktop", "midi", "synth"]
# Desktop UI (winit + softbuffer) and logging
desktop = ["dep:winit", "dep:softbuffer", "dep:log", "dep:env_logger"]
# MIDI runtime support
midi = ["dep:midir"]
# Built-in synth output (desktop via cpal)
synth = ["dep:cpal", "dep:crossbeam-channel"]
# Minimal JNI symbols for Android APK builds
android = ["dep:jni"]

[[bin]]
name = "rust-harp"
path = "src/main.rs"
required-features = ["desktop", "midi"]
